--- a/css/syntax.css
+++ b/css/syntax.css
@@ -1,6 +1,16 @@
+/*DETAILS OF AUTHOR*/
 
-
+/*Style all p tags*/
 p {
   font-size: 18px;
   color: blue;
+}
+
+#header p {
+  font-size: 24px;
+}
+
+/*Style all header tags*/
+h1 {
+  font-size: 44px;
 }
