--- a/css/syntax.css
+++ b/css/syntax.css
@@ -1,16 +1,24 @@
-/*DETAILS OF AUTHOR*/
-
+/* TARGETING ELEMENTS / TAGS */
 /*Style all p tags*/
 p {
-  font-size: 18px;
+  font-size: 12px;
+  color: red;
+}
+
+a {
+  text-decoration: underline;
   color: blue;
 }
 
-#header p {
-  font-size: 24px;
+span {
+  text-transform: uppercase;
 }
 
-/*Style all header tags*/
 h1 {
-  font-size: 44px;
+  font-size: 32px;
+}
+
+div {
+  width: 100%;
+  background-color: grey;
 }
