--- a/css/syntax.css
+++ b/css/syntax.css
@@ -1,18 +1,16 @@
-/* TARGETING ELEMENTS / TAGS */
- h2 {
-   font-size: 24px;
- }
-
-#content-header {
-  font-size: 18px;
+body {
   color: red;
 }
 
-span {
-  display: block;
+div {
   color: blue;
 }
 
-.deck {
-  color: red;
+p {
+  color: green;
+}
+
+a {
+  color: yellow;
+  text-decoration: underline;
 }
