--- a/css/syntax.css
+++ b/css/syntax.css
@@ -1,6 +1,5 @@
-p, span, a, li {
-  color: red;
-  font-size: 14px;
-  font-weight: bold;
-  font-family: Arial;
-}
+
+ #main-content p {
+   color: red;
+
+ }
