--- a/css/syntax.css
+++ b/css/syntax.css
@@ -1,3 +1,11 @@
-#all-articles h2 + p{
-  color: red;
+span[class="deck"] {
+  color: purple;
+}
+
+div[id] {
+  background: grey;
+}
+
+a [href$="pdf"] {
+  color: green;
 }
