--- a/css/syntax.css
+++ b/css/syntax.css
@@ -1,11 +1,3 @@
-span[class="deck"] {
-  color: purple;
-}
-
-div[id] {
-  background: grey;
-}
-
-a [href$="pdf"] {
-  color: green;
+a:hover {
+  color: red;
 }
