--- a/css/syntax.css
+++ b/css/syntax.css
@@ -1,3 +1,11 @@
-div p:nth-of-type(1){
-  font-weight: bold;
+#main-content{
+  font-size: 16px;
+}
+
+#main-content p{
+  font-size: 4em;
+}
+
+#main-content div{
+  font-size: 50%;
 }
